# implicit-skinning

./: .gitignore  CMakeLists.txt  README.md  ilst_cpp_and_h.py
main/: main.cpp  skinning.h
